--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,13 @@
-fastapi
-uvicorn
-websockets
-httpx
-pydantic
-python-dotenv
-web3
-eth-account
+fastapi==0.104.1
+uvicorn==0.23.2
+websockets==11.0.3
+httpx==0.25.1
+pydantic==2.4.2
+python-dotenv==1.0.0
+web3==6.11.1
+eth-account==0.8.0
+eth-utils==2.2.0
+eth-typing==3.5.1
+asyncio==3.4.3
+typing-extensions==4.8.0
+starlette==0.27.0
